pt-sf/main/default/objects/Project_Item__c/Project_Item__c.object-meta.xml
<CustomObject>
    <label>Project Item</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Project Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>