pt-sf/main/default/objects/Project_Item__c/fields/Age_Since_Update__c.field-meta.xml
<CustomField>
    <fullName>Age_Since_Update__c</fullName>
    <formula>DATETIMEVALUE(pt_updated_at__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Since Update</label>
    <type>DateTime</type>
</CustomField>