pt-sf/main/default/objects/Project_Item__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>