pt-sf/main/default/objects/Project_Item__c/fields/Days_since_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Update__c</fullName>
    <formula>Today() -  DATEVALUE(Age_Since_Update__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>