pt-sf/main/default/objects/Project_Item__c/fields/pt_created_at__c.field-meta.xml
<CustomField>
    <fullName>pt_created_at__c</fullName>
    <label>pt_created_at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>