pt-sf/main/default/objects/Project_Item__c/fields/pt_current_state__c.field-meta.xml
<CustomField>
    <fullName>pt_current_state__c</fullName>
    <label>pt_current_state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>