pt-sf/main/default/objects/Project_Item__c/fields/pt_description__c.field-meta.xml
<CustomField>
    <fullName>pt_description__c</fullName>
    <label>pt_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>