pt-sf/main/default/objects/Project_Item__c/fields/pt_estimate__c.field-meta.xml
<CustomField>
    <fullName>pt_estimate__c</fullName>
    <label>pt_estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>