pt-sf/main/default/objects/Project_Item__c/fields/pt_id__c.field-meta.xml
<CustomField>
    <fullName>pt_id__c</fullName>
    <externalId>true</externalId>
    <label>pt_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>