pt-sf/main/default/objects/Project_Item__c/fields/pt_kind__c.field-meta.xml
<CustomField>
    <fullName>pt_kind__c</fullName>
    <label>pt_kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>