pt-sf/main/default/objects/Project_Item__c/fields/pt_name__c.field-meta.xml
<CustomField>
    <fullName>pt_name__c</fullName>
    <label>pt_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>