pt-sf/main/default/objects/Project_Item__c/fields/pt_project_id__c.field-meta.xml
<CustomField>
    <fullName>pt_project_id__c</fullName>
    <label>pt_project_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>