pt-sf/main/default/objects/Project_Item__c/fields/pt_story_type__c.field-meta.xml
<CustomField>
    <fullName>pt_story_type__c</fullName>
    <label>pt_story_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>