pt-sf/main/default/objects/Project_Item__c/fields/pt_url__c.field-meta.xml
<CustomField>
    <fullName>pt_url__c</fullName>
    <label>pt_url</label>
    <type>Url</type>
</CustomField>